# firebirdsql-run

./: .pre-commit-config.yaml  .renovaterc.json  .typos.toml  CHANGELOG.md  Makefile  README.md  cliff.toml  docker-compose.firebird.yml  docker-compose.test.yml  mkdocs.yml  pyproject.toml
.github/workflows/: codeql.yml  main.yml  python-app.yml
docs/: index.md  test.md  util.md
docs/scripts/: gen_ref_nav.py
docs/src/: main.md  type.md
src/firebirdsql_run/: __init__.py  main.py  type.py  util.py
tests/: test_firebirdsql_run.py  test_main.py  test_type.py  test_util.py
