[tool.poetry]
name = "firebirdsql-run"
version = "1.0.1"
description = "Firebirdsql wrapper inspired by subprocess.run"
authors = ["DeadNews <uhjnnn@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DeadNews/firebirdsql-run"
repository = "https://github.com/DeadNews/firebirdsql-run"
keywords = ["firebird", "sql", "api"]
classifiers = ["Operating System :: OS Independent", "Topic :: Database"]

[tool.poetry.dependencies]
python = "^3.9"
firebirdsql = "^1.2.2"

[tool.poetry.group.ci.dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-implicit-str-concat = "^0.3.0"
flake8-pie = "^0.16.0"
flake8-pyproject = "^1.2.2"
flake8-pytest-style = "^1.6.0"
flake8-requirements = "^1.7.5"
flake8-simplify = "^0.19.3"
flake8-unused-arguments = "^0.0.12"
flake8-use-pathlib = "^0.3.0"
isort = "^5.11.4"
mypy = "^0.991"
pep8-naming = "^0.13.3"
poethepoet = ">=0.17.1,<0.19.0"
safety = "^2.3.5"
types-requests = "^2.28.11.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.flake8]
max-line-length = 99
max-complexity = 18
show-source = true
ignore = [
  "E501",   # Line too long.
  "PIE786", # Use precise exception handlers.
  "PIE803", # Use lazy % formatting in logging functions.
  "W503",   # Line break occurred before a binary operator.
]
per-file-ignores = [
  "tests/*: I900", # Package is not listed as a requirement.
]

[tool.isort]
line_length = 99
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
  "B404", # Importing subprocess.
  "B603", # Calling subprocess.Popen without shell=True.
]

[tool.pytest.ini_options]
addopts = "--verbose --cov=./src"
testpaths = ["tests"]
markers = ["docker", "slow"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.poe.tasks]
isort = "isort . --check-only --diff"
black = "black . --check --diff"
mypy = "mypy ."
flake8 = "flake8 ."
bandit = "bandit -r . -c pyproject.toml"
safety = "safety check -r pyproject.toml -o bare"
ci.sequence = ["isort", "black", "mypy", "flake8", "bandit", "safety"]
pc = "pre-commit run -a"
