[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "firebirdsql-run"
version = "0.0.0"
description = "Firebirdsql wrapper inspired by subprocess.run"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DeadNews/firebirdsql-run"
repository = "https://github.com/DeadNews/firebirdsql-run"
keywords = ["firebird", "sql", "api"]
classifiers = ["Operating System :: OS Independent", "Topic :: Database"]

[tool.poetry.dependencies]
python = "^3.10"
firebirdsql = "^1.2.2"

[tool.poetry.group.ci.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
poethepoet = "^0.19.0"
ruff = "^0.0.264"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.poe.tasks]
ruff = "ruff check . --diff --format github"
black = "black . --check --diff"
mypy = "mypy ."
ci.sequence = ["ruff", "black", "mypy"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.black]
line-length = 99

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
  "B404", # Importing subprocess.
  "B603", # Calling subprocess.Popen without shell=True.
]

[tool.pytest.ini_options]
addopts = "--verbose --cov=./src"
testpaths = ["tests"]
markers = ["docker", "slow"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.ruff]
line-length = 99
select = ["ALL"]
ignore = [
  "D203",   # 1 blank line required before class docstring
  "D212",   # Multi-line docstring summary should start at the first line
  "E501",   # Line too long
  "EXE001", # Shebang is present but file is not executable
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "D", "S"]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pylint]
max-args = 8
